# SolarGrid_AI_OpenEnv

./: ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  app.py  baseline_inference.py  dashboard_server.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_mappo.py
powergrid-main/PowerGridworld-main/examples/: README.md
powergrid-main/PowerGridworld-main/paper/fig3/ray_results/PPO_power-gridworld_b4178_00000_0_framework=torch_2021-11-02_20-28-17/: progress.csv
server/: app.py
src/envs/: models.py  openenv_wrapper.py
templates/: circuit.html  index.html
tests/: test_env.py
